@@ -7,15 +7,14 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>com.hcw.framework</groupId>
-  <artifactId>hcw-learning</artifactId>
+    <artifactId>hcw-learning</artifactId>
   <version>1.0.0.SNAPSHOT</version>
 
   <name>hcw-learning</name>
 
   <properties>
-		<maven.compiler.source>13</maven.compiler.source>
-    	<maven.compiler.target>13</maven.compiler.target>
+		<maven.compiler.source>14</maven.compiler.source>
+    	<maven.compiler.target>14</maven.compiler.target>
   </properties>
   
   <dependencies>
@@ -39,13 +38,13 @@
    <build>
     <pluginManagement>
       <plugins>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <configuration>
+<!--        <plugin>-->
+<!--          <artifactId>maven-compiler-plugin</artifactId>-->
+<!--          <configuration>-->
 <!--            <release>14</release>-->
-            <compilerArgs>--enable-preview</compilerArgs>
-          </configuration>
-        </plugin>
+<!--            <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
+<!--          </configuration>-->
+<!--        </plugin>-->
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -68,19 +67,7 @@
       </plugin>
       </plugins>
     </pluginManagement>
-       <plugins>
 
-
-
-           <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-compiler-plugin</artifactId>
-               <configuration>
-                   <source>13</source>
-                   <target>13</target>
-               </configuration>
-           </plugin>
-       </plugins>
    </build>
 
 </project>
